console scrolls down automatically. Also fixed a bug with the showconsole button being stuck behind the scrollbar

--- a/public/stylesheets/veryWidescreens.css
+++ b/public/stylesheets/veryWidescreens.css
@@ -76,8 +76,6 @@
         display: block;
         width: 4vw;
         height: 5vw;
-        transition-property: left;
-        transition: 0s;
         overflow: hidden;
     }
 
